--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>Sawa red test</title>
+<title>Back Alley SPA</title>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 <style>
 * {
@@ -19,50 +19,27 @@ body {
     overflow: hidden;
 }
 
-/* 어두운 그레인 느낌 */
-body::after {
-    content: "";
-    position: fixed;
+/* ===== 인트로 ===== */
+.intro {
+    position: absolute;
     width: 100%;
     height: 100%;
-    background: url('https://grainy-gradients.vercel.app/noise.svg');
-    opacity: 0.05;
-    pointer-events: none;
-}
-
-.container {
-    height: 100%;
+    background: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-
-    background: linear-gradient(
-        rgba(0,0,0,0.8),
-        rgba(0,0,0,0.9)
-    );
+    z-index: 10;
 }
 
-h1 {
+.intro h1 {
     font-size: 4rem;
-    letter-spacing: 6px;
     color: #ff003c;
-    text-shadow:
-        0 0 5px #ff003c,
-        0 0 10px #ff003c,
-        0 0 20px #990022;
-    animation: flicker 2s infinite alternate;
+    text-shadow: 0 0 10px #ff003c;
 }
 
-p {
-    margin-top: 20px;
-    color: #888;
-    font-size: 1.1rem;
-}
-
-button {
-    margin-top: 40px;
+.intro button {
+    margin-top: 30px;
     padding: 12px 30px;
     background: transparent;
     border: 1px solid #ff003c;
@@ -71,28 +48,172 @@ button {
     transition: 0.3s;
 }
 
-button:hover {
+.intro button:hover {
     background: #ff003c;
     color: black;
     box-shadow: 0 0 15px #ff003c;
 }
 
-/* 네온 깜빡임 */
-@keyframes flicker {
-    0% { opacity: 1; }
-    45% { opacity: 0.8; }
-    50% { opacity: 0.6; }
-    55% { opacity: 0.9; }
-    100% { opacity: 1; }
+/* ===== 메인 ===== */
+.main-wrapper {
+    display: none;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-box {
+    width: 80%;
+    height: 70%;
+    border: 2px solid #ff003c;
+    border-radius: 25px;
+    display: flex;
+    padding: 40px;
+    background: rgba(0,0,0,0.85);
+    box-shadow: 0 0 25px #550011;
+}
+
+/* ===== 사이드바 ===== */
+.sidebar {
+    width: 200px;
+    border-right: 1px solid #ff003c;
+    padding-right: 30px;
+}
+
+.sidebar ul {
+    list-style: none;
+}
+
+.sidebar li {
+    margin: 25px 0;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.sidebar li:hover {
+    color: #ff003c;
+}
+
+/* 활성화된 메뉴 */
+.sidebar li.active {
+    background: #ff003c;
+    color: black;
+    font-weight: bold;
+}
+
+/* ===== 콘텐츠 ===== */
+.content {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+/* 화면 공통 */
+.screen {
+    position: absolute;
+    text-align: center;
+    opacity: 0;
+    transform: translateY(40px);
+    transition: 0.5s;
+}
+
+.screen.active-screen {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+/* 프로필 이미지 */
+.profile-img {
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 20px;
+    border: 1px solid #ff003c;
+    margin-bottom: 20px;
+}
+
+.nickname {
+    font-size: 1.3rem;
+    color: #ff003c;
+    letter-spacing: 2px;
 }
 </style>
 </head>
 
 <body>
-<div class="container">
-    <h1>SAWA TEST</h1>
-    <p>사와 테스트 페이지</p>
-    <button>기능은 (아직) 없는 버튼...</button>
+
+<!-- 인트로 -->
+<div class="intro" id="intro">
+    <h1>Sawa Test Site</h1>
+    <button onclick="enterSite()">ENTER</button>
 </div>
+
+<!-- 메인 -->
+<div class="main-wrapper" id="main">
+    <div class="main-box">
+
+        <div class="sidebar">
+            <ul>
+                <li class="active" onclick="changeTab(this,'home')">Home</li>
+                <li onclick="changeTab(this,'profile')">Profile</li>
+                <li onclick="changeTab(this,'pic')">Pic</li>
+            </ul>
+        </div>
+
+        <div class="content">
+
+            <!-- Home -->
+            <div id="home" class="screen active-screen">
+                <img class="profile-img"
+                     src="https://youngest-chocolate-kpyw8awlkj.edgeone.app/IMG_1886.jpeg">
+                <div class="nickname">Sawa</div>
+            </div>
+
+            <!-- Profile -->
+            <div id="profile" class="screen">
+                <h2 style="color:#ff003c;">PROFILE</h2>
+                <p>Crepe @Sawa_ Test</p>
+            </div>
+
+            <!-- Pic -->
+            <div id="pic" class="screen">
+                <h2 style="color:#ff003c;">PIC</h2>
+                <p>사진이 업다...</p>
+            </div>
+
+        </div>
+
+    </div>
+</div>
+
+<script>
+function enterSite() {
+    document.getElementById("intro").style.display = "none";
+    document.getElementById("main").style.display = "flex";
+}
+
+function changeTab(element, targetId) {
+
+    // 사이드 active 제거
+    document.querySelectorAll(".sidebar li").forEach(li => {
+        li.classList.remove("active");
+    });
+
+    element.classList.add("active");
+
+    // 화면 전환
+    document.querySelectorAll(".screen").forEach(screen => {
+        screen.classList.remove("active-screen");
+    });
+
+    document.getElementById(targetId).classList.add("active-screen");
+}
+</script>
+
 </body>
 </html>
